--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
     "start": "node dist/index.js",
     "test": "vitest"
   },
-  "keywords": ["star-wars", "api", "gemini", "image-generation"],
+  "keywords": [
+    "star-wars",
+    "api",
+    "gemini",
+    "image-generation"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@google/generative-ai": "^0.21.0",
+    "express": "^4.18.2",
     "mongoose": "^8.0.3",
+    "openai": "^6.15.0",
+    "replicate": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
